// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
~~123~~

=====================================output=====================================
~~123~~

================================================================================
`;

exports[`single-tilde.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
H~2~O

~~2~~ and ~1~ and ~~~3~~~ and ~~~~4~~~~

=====================================output=====================================
H~2~O

~~2~~ and ~1~ and ~~~3~~~ and ~~~~4~~~~

================================================================================
`;
